# cpu-render

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/common/: Colour.h  Vec3.h
src/image/: ImageWrite.cpp  ImageWrite.h
src/primitives/: Sphere.cpp  Sphere.h  ray_hittable.h
src/ray/: Ray.h
